# funutils

./: Cargo.toml  Makefile  README.md
.github/workflows/: build.yml
src/: lib.rs  main.rs  zalgo.rs
src/parrots/: info.txt  untitled_00001.png.txt  untitled_00002.png.txt  untitled_00003.png.txt  untitled_00004.png.txt  untitled_00005.png.txt  untitled_00006.png.txt  untitled_00007.png.txt  untitled_00008.png.txt  untitled_00009.png.txt  untitled_00010.png.txt
src/parrots/asyncparrot/: asyncparrot-0.parrot  asyncparrot-1.par  asyncparrot-10.par  asyncparrot-100.par  asyncparrot-101.parrot  asyncparrot-102.parrot  asyncparrot-103.parrot  asyncparrot-104.parrot  asyncparrot-105.par  asyncparrot-106.par  asyncparrot-107.parrot  asyncparrot-108.par  asyncparrot-109.par  asyncparrot-11.parrot  asyncparrot-110.par  asyncparrot-111.parrot  asyncparrot-112.par  asyncparrot-113.par  asyncparrot-114.parrot  asyncparrot-115.par  asyncparrot-116.par  asyncparrot-117.parrot  asyncparrot-118.par  asyncparrot-119.parrot  asyncparrot-12.parrot  asyncparrot-120.par  asyncparrot-121.parrot  asyncparrot-122.parrot  asyncparrot-123.parrot  asyncparrot-124.par  asyncparrot-125.par  asyncparrot-126.parrot  asyncparrot-127.par  asyncparrot-128.par  asyncparrot-129.par  asyncparrot-13.parrot  asyncparrot-130.par  asyncparrot-131.par  asyncparrot-132.parrot  asyncparrot-133.parrot  (+120 more)
src/parrots/bananaparrot/: bananaparrot-0.par  bananaparrot-1.par  bananaparrot-2.parrot  bananaparrot-3.par  bananaparrot-4.parrot  bananaparrot-5.par  bananaparrot-6.parrot  bananaparrot-7.par  (+2 more)
(+795 files in other folders)
